--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="menu-container">
+          <div class="logo">GeekFolio</div>
+          <div class="menus">
+            <li class="item">Home-1</li>
+            <li class="item">Home-2</li>
+            <li class="item">Home-3</li>
+            <li class="item">Home-4</li>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- main starts here  -->
+    <main></main>
+    <!-- footer starts here  -->
+    <footer></footer>
+  </body>
 </html>
