--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- this is the header section  -->
     <header>
       <nav>
         <div class="menu-container">
@@ -21,7 +22,20 @@
       </nav>
     </header>
     <!-- main starts here  -->
-    <main></main>
+    <main>
+      <section>
+        <div class="banner-container">
+          <div class="banner-text">
+            <h1></h1>
+            <p></p>
+            <button>explore</button>
+          </div>
+          <div class="banner-photo">
+            <img src="./images/DEV.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer starts here  -->
     <footer></footer>
   </body>
