nav bar created

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="menu-container">
           <div class="logo">GeekFolio</div>
           <div class="menus">
-            <li class="item">Home-1</li>
-            <li class="item">Home-2</li>
-            <li class="item">Home-3</li>
-            <li class="item">Home-4</li>
+            <li class="item"><a href="https://www.google.com/">Home-1</a></li>
+            <li class="item"><a href="https://www.google.com/">Home-2</a></li>
+            <li class="item"><a href="https://www.google.com/">Home-3</a></li>
+            <li class="item"><a href="https://www.google.com/">Home-4</a></li>
           </div>
         </div>
       </nav>
@@ -26,12 +26,9 @@
       <section>
         <div class="banner-container">
           <div class="banner-text">
-            <h1></h1>
-            <p></p>
-            <button>explore</button>
-          </div>
-          <div class="banner-photo">
-            <img src="./images/DEV.jpg" alt="" />
+            <h1>Better Designs for Your Best Products</h1>
+            <p>We are here for your every UI/UX needs</p>
+            <button class="button">Explore More</button>
           </div>
         </div>
       </section>
