banned half done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Project-1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,9 +26,17 @@
       <section>
         <div class="banner-container">
           <div class="banner-text">
-            <h1>Better Designs for Your Best Products</h1>
-            <p>We are here for your every UI/UX needs</p>
+            <h1 class="banner-text-title">
+              Best Designs for <br />
+              Your Amazing Products
+            </h1>
+            <p class="description">
+              We are here for your every UI/UX needs, strategies, Ideas
+            </p>
             <button class="button">Explore More</button>
+          </div>
+          <div class="banner-img">
+            <img src="/images/banner.png" alt="" class="img" />
           </div>
         </div>
       </section>
