about us completed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,28 @@
             <button class="button">Explore More</button>
           </div>
           <div class="banner-img">
-            <img src="/images/banner.png" alt="" class="img" />
+            <img src="/images/banner.png" alt="" class="banner-img" />
+          </div>
+        </div>
+      </section>
+      <!-- this is about us section  -->
+      <section class="about">
+        <h1 class="abt">About US</h1>
+        <div class="about-container">
+          <div class="about-img">
+            <img src="./images/section.png" alt="" class="about-image" />
+          </div>
+          <div class="About-Text">
+            <h2 class="about-text-title">
+              We grow brand though <br />
+              bold and strategic creative
+            </h2>
+            <p class="about-text-info">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Corporis, <br />
+              debitis sint, quo at nisi fugit natus
+            </p>
+            <button class="about-button">Contact US</button>
           </div>
         </div>
       </section>
