--- a/index.html
+++ b/index.html
@@ -61,6 +61,42 @@
           </div>
         </div>
       </section>
+      <!-- services section starts here -->
+      <section class="service-background">
+        <h1 class="svc-title">Our Services</h1>
+        <div class="service-container">
+          <div class="box">
+            <img src="./icon/0.png" alt="" width="70px" />
+            <h2 class="box-heading">UI/UX</h2>
+            <p class="box-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              quas aut odio iure laboriosam quaerat sint incdunt soluta nulla
+              mollitia!
+            </p>
+            <button class="box-button">Details</button>
+          </div>
+          <div class="box">
+            <img src="./icon/1.png" alt="" width="70px" />
+            <h2 class="box-heading">Web Dev</h2>
+            <p class="box-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              quas aut odio iure laboriosam quaerat sint incdunt soluta nulla
+              mollitia!
+            </p>
+            <button class="box-button">Details</button>
+          </div>
+          <div class="box">
+            <img src="./icon/2.png" alt="" width="70px" />
+            <h2 class="box-heading">Front-End</h2>
+            <p class="box-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              quas aut odio iure laboriosam quaerat sint incdunt soluta nulla
+              mollitia!
+            </p>
+            <button class="box-button">Details</button>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer starts here  -->
     <footer></footer>
