--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
         <div class="menu-container">
           <div class="logo">GeekFolio</div>
           <div class="menus">
-            <li class="item"><a href="https://www.google.com/">Home-1</a></li>
-            <li class="item"><a href="https://www.google.com/">Home-2</a></li>
-            <li class="item"><a href="https://www.google.com/">Home-3</a></li>
-            <li class="item"><a href="https://www.google.com/">Home-4</a></li>
+            <li class="item">
+              <a href="https://www.google.com/" target="_blank">Home-2</a>
+            </li>
+            <li class="item">
+              <a href="https://www.google.com/" target="_blank">Home-1</a>
+            </li>
+            <li class="item">
+              <a href="https://www.google.com/" target="_blank">Home-3</a>
+            </li>
+            <li class="item">
+              <a href="https://www.google.com/" target="_blank">Home-4</a>
+            </li>
           </div>
         </div>
       </nav>
     </header>
     <!-- main starts here  -->
     <main>
+      <!-- banner starts here  -->
       <section>
         <div class="banner-container">
           <div class="banner-text">
@@ -42,22 +51,24 @@
       </section>
       <!-- this is about us section  -->
       <section class="about">
-        <h1 class="abt">About US</h1>
-        <div class="about-container">
-          <div class="about-img">
-            <img src="./images/section.png" alt="" class="about-image" />
-          </div>
-          <div class="About-Text">
-            <h2 class="about-text-title">
-              We grow brand though <br />
-              bold and strategic creative
-            </h2>
-            <p class="about-text-info">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Corporis, <br />
-              debitis sint, quo at nisi fugit natus
-            </p>
-            <button class="about-button">Contact US</button>
+        <div class="whole-about">
+          <h1 class="abt">About US</h1>
+          <div class="about-container">
+            <div class="about-img">
+              <img src="./images/section.png" alt="" class="about-image" />
+            </div>
+            <div class="about-Text">
+              <h2 class="about-text-title">
+                We grow brand though <br />
+                bold and strategic creative
+              </h2>
+              <p class="about-text-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Corporis, <br />
+                debitis sint, quo at nisi fugit natus
+              </p>
+              <button class="about-button">Contact US</button>
+            </div>
           </div>
         </div>
       </section>
@@ -97,8 +108,42 @@
           </div>
         </div>
       </section>
+      <!-- link section starts here  -->
     </main>
     <!-- footer starts here  -->
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="company-footer">
+          <h1>GeekFolio</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div>
+          <h2>Usefull links</h2>
+          <li class="footer-item">About Us</li>
+          <li class="footer-item">Career</li>
+          <li class="footer-item">News Archives</li>
+          <li class="footer-item">Legal Notice</li>
+        </div>
+
+        <div>
+          <h2>Supports</h2>
+          <li class="footer-item">Help</li>
+          <li class="footer-item">Community</li>
+          <li class="footer-item">FAQ</li>
+        </div>
+
+        <div>
+          <h2>Find Us</h2>
+          <p class="address">
+            3557 Rrive Road, Orlando, Florida <br />
+            +1(564)878-8212 <br />
+            clifton.leuschke@pacocha.biz
+          </p>
+        </div>
+      </div>
+      <p>© All rights reserved by Shahriar</p>
+      <!-- <hr style="color: grey" /> -->
+    </footer>
   </body>
 </html>
