image error solve 1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button class="button">Explore More</button>
           </div>
           <div class="banner-img">
-            <img src="/images/banner.png" alt="" class="banner-img" />
+            <img src="images/banner.png" alt="" class="banner-img" />
           </div>
         </div>
       </section>
